Added reflexion tasks