@@ -1,29 +1,89 @@
 package ru.luxtington.main;
 
-import ru.luxtington.oop.people.family.Child;
-import ru.luxtington.oop.people.family.IllegalMarkException;
-import ru.luxtington.oop.people.family.Parent;
-import ru.luxtington.oop.people.family.Swearing;
-import ru.luxtington.oop.people.initials.Initial;
-import ru.luxtington.oop.people.initials.ProxyComparator;
+import ru.luxtington.annotations.*;
+import ru.luxtington.oop.people.family.Boy;
+import ru.luxtington.reflection.base.other.B;
+import ru.luxtington.reflection.base.other.Cacher;
+import ru.luxtington.reflection.base.other.Reflector;
+import ru.luxtington.reflection.hard.ClassWithUtils;
 
-import java.util.ArrayList;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 public class Main {
-    public static void main(String[] args) {
-        Initial name1 =  Initial.of("Ivanov", "Ivan", "Ivanovich");
-        Initial name2 =  Initial.of("Ivan", "Ivanov", "Ivanovich");
-        Initial name3 =  Initial.of("I", "Ivav", "noich");
-        Initial name4 =  Initial.of("Ivn", "Ivnov", "Ivvich");
-        Initial name5 =  Initial.of("n", "Ivnov", "Ivanovich");
-        Initial name6 =  Initial.of("I", "Ivov", "Ivan");
+    public static void main(String[] args) throws Exception {
 
-        List<Initial> lst = new ArrayList<>(Arrays.asList(name1, name2, name3, name4, name5, name6));
+//        Map<String, Object> res = ClassWithUtils.collect(List.of(Reflector.class, Boy.class));
+//        System.out.println(res);
+//        System.out.println(res.size());
 
-        lst.sort(new ProxyComparator(name1));
+//        B b = new B(-1, "a", -2);
+//        My my = new My("hola");
+//        System.out.println(b);
+//        System.out.println(my);
+//        ClassWithUtils.reset(b, my);
+//        System.out.println(b);
+//        System.out.println(my);
 
-        System.out.println(lst);
+//        B b = new B(-1, "a", 2);
+//        System.out.println(b);
+
+//        Reflector.validate(new Boy(-10, "Vasya", 22));
+
+        List<Able> ables = Cacher.cache(new My("ajah", 14));
+        Able m1 = ables.get(0);
+        System.out.println(m1.getNum());
+        System.out.println(m1.getData());
+        System.out.println(m1.getData());
+        System.out.println("============");
+        m1.setData("ratata");
+        System.out.println(m1.getData());
+        System.out.println(m1.getData());
+        System.out.println(m1.getNum());
+
+
+    }
+}
+
+interface Able {
+    String getData();
+    Integer getNum();
+    void setData(String data);
+}
+@Cache("getData")
+@Default(DefaultValuesHolder.class)
+class My implements Able {
+    private String data;
+    public Integer num;
+
+    public My(String data, Integer num) {
+        this.data = data;
+        this.num = num;
+    }
+
+    @Override
+    public String getData() {
+        System.out.println("Original data");
+        return data;
+    }
+
+    public Integer getNum() {
+        System.out.println("Original num");
+        return num;
+    }
+
+    @Override
+    public void setData(String data) {
+        this.data = data;
+    }
+
+    @Override
+    public String toString() {
+        return "My{" +
+                "data='" + data + '\'' +
+                '}';
     }
 }
